# polylabel-rs

./: .travis.yml  Cargo.toml  Cross.toml  README.md  Untitled.ipynb  appveyor.yml  build.rs  ell.geojson  ffi.py  labels.geojson  nodes.txt  visualise.ipynb
.github/workflows/: rust.yml
benches/: benchmark.rs  benchmarks.rs
ci/: before_deploy.ps1  before_deploy.sh  before_deploy_manylinux1.sh  before_deploy_osx.sh  before_deploy_windows.ps1  install.sh  manylinux_rust.sh  preinstall.sh  script.sh
include/: header.h
src/: errors.rs  ffi.rs  lib.rs  poly3.rs
tests/: large_polygon.rs
tests/fixtures/: poly1.rs  poly2.rs  poly3.rs
