[package]
name = "polylabel"
version = "2.4.2"
authors = ["Stephan Hügel <urschrei@gmail.com>"]
description = "A Rust implementation of the Polylabel algorithm for finding optimum polygon label positions."
readme = "README.md"
keywords = ["geo", "polylabel", "gis"]
repository = "https://github.com/urschrei/polylabel-rs"
license = "MIT"
edition = "2018"

[dependencies]
libc = "0.2.29"
geo = "0.23.0"
num-traits = "0.2.8"
thiserror = "1.0.4"

[build-dependencies]
cbindgen = { version = "0.24.2", default-features=false, optional = true}

[dev-dependencies]
criterion = "0.3.0"

[features]
headers = ["cbindgen"]

[lib]
name = "polylabel"
crate-type = ["rlib", "cdylib"]
test = true
doctest = true
doc = true

[profile.release]
rpath = true
lto = true

[[bench]]
name = "benchmark"
harness = false

