[package]
name = "polylabel"
version = "3.1.0"
authors = ["Stephan Hügel <urschrei@gmail.com>"]
description = "A Rust implementation of the Polylabel algorithm for finding optimum polygon label positions."
readme = "README.md"
keywords = ["geo", "polylabel", "gis"]
repository = "https://github.com/urschrei/polylabel-rs"
license = "MIT"
edition = "2021"

[dependencies]
libc = {version = "0.2.149", default-features=false, optional = true}
geo = "0.27.0"
num-traits = "0.2.8"
thiserror = "1.0.4"

[build-dependencies]
cbindgen = { version = "0.24.2", default-features=false, optional = true}

[dev-dependencies]
criterion = "0.4.0"

[features]
headers = ["cbindgen"]
ffi = ["libc"]

[lib]
name = "polylabel"
crate-type = ["rlib", "cdylib"]
test = true
doctest = true
doc = true

[profile.release]
rpath = true
lto = true

[[bench]]
name = "benchmark"
harness = false

[package.metadata.docs.rs]
# Features to pass to Cargo (default: [])
features = ["ffi"]
