[package]
name = "polylabel"
version = "3.2.0"
authors = ["Stephan Hügel <urschrei@gmail.com>"]
description = "A Rust implementation of the Polylabel algorithm for finding optimum polygon label positions."
readme = "README.md"
keywords = ["geo", "polylabel", "gis"]
repository = "https://github.com/urschrei/polylabel-rs"
license = "BlueOak-1.0.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
libc = {version = "0.2.153", default-features=false, optional = true}
geo = "0.29.0"
num-traits = "0.2.18"
thiserror = "2.0.7"

[build-dependencies]
cbindgen = { version = "0.26.0", default-features=false, optional = true}

[dev-dependencies]
criterion = "0.5.1"

[features]
headers = ["cbindgen"]
ffi = ["libc"]

[lib]
name = "polylabel"
crate-type = ["rlib", "cdylib"]
test = true
doctest = true
doc = true

[profile.release]
rpath = true
lto = true

[[bench]]
name = "benchmark"
harness = false

[package.metadata.docs.rs]
# Features to pass to Cargo (default: [])
features = ["ffi"]
